k8s/collection-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-cache-collector-${BUILD_ENV}
  labels: 
    app: my-deployment-cache-collector-${BUILD_ENV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-deployment-cache-collector-${BUILD_ENV}

  template:
    metadata:
      labels:
        app: my-deployment-cache-collector-${BUILD_ENV}
        
    spec:
      imagePullSecrets:
      - name: ocir-ipull-secret 
      containers:
      - name: cache-collector
        image: iad.ocir.io/${OCI_NAMESPACE}/data-collection-${BUILD_ENV}:latest
        resources:
          limits:
            memory: 2Gi
            cpu: 400m
          requests:
            memory: 1Gi
            cpu: 200m
        ports:
        - containerPort: 8080
