k8s/front-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-servers-${BUILD_ENV}
  labels:
    app: my-deployment-frontend-backend-${BUILD_ENV}
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-deployment-frontend-backend-${BUILD_ENV}

  template:
    metadata:
      labels:
        app: my-deployment-frontend-backend-${BUILD_ENV}

    spec:
      imagePullSecrets:
      - name: ocir-ipull-secret
      containers:
      - name: front-end
        image: iad.ocir.io/${OCI_NAMESPACE}/front-end-${BUILD_ENV}:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: 200Mi
            cpu: 40m
          requests:
            memory: 100Mi
            cpu: 20m

      - name: back-end
        image: iad.ocir.io/${OCI_NAMESPACE}/back-end-${BUILD_ENV}:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
        resources:
          limits:
            memory: 800Mi
            cpu: 80m
          requests:
            memory: 500Mi
            cpu: 60m
