k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    app: my-deployment-frontend-backend-${BUILD_ENV}
  ports:
  
  - name: frontend
    protocol: TCP
    port: 80
    targetPort: 80

  - name: backend
    protocol: TCP
    port: 8000
    targetPort: 8000
