k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
spec:
  selector:
    app: my-deployment-cache-collector-${BUILD_ENV}
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  clusterIP: None
