k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    name: my-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - ${FRONT_END_HOST}
    secretName: my-app-tls

  defaultBackend:
    service:
      name: front-end-service
      port:
        number: 80

  rules:
  - host: ${FRONT_END_HOST}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-end-service
            port: 
              number: 80

      - pathType: Prefix
        path: "/api"
        backend:
          service: 
            name: front-end-service
            port: 
              number: 80
